# VirtualFactory

./: README.md
src/aruco_grasp_conveyor/: package.xml  setup.cfg  setup.py
src/aruco_grasp_conveyor/aruco_grasp_conveyor/: hand_eye.py  status_test.py
src/aruco_grasp_conveyor/aruco_grasp_conveyor/amr/: amr_node.py
src/aruco_grasp_conveyor/aruco_grasp_conveyor/aruco_marker/: aruco_detection.py
src/aruco_grasp_conveyor/aruco_grasp_conveyor/aruco_marker/npy/: distortion_coefficients.npy
src/aruco_grasp_conveyor/aruco_grasp_conveyor/mannipulator/: manipulation_grip.py
src/aruco_grasp_conveyor/aruco_grasp_conveyor/server/: gui_server.py  server_node.py
src/virtual_factory/: package.xml  setup.cfg  setup.py
src/virtual_factory/virtual_factory/: arduino.cpp  send_email.py
src/virtual_factory/virtual_factory/amr/: amr_node.py
src/virtual_factory/virtual_factory/aruco_marker/: aruco_detection.py
src/virtual_factory/virtual_factory/aruco_marker/npy/: camera_matrix.npy
src/virtual_factory/virtual_factory/database/: working_status.db
src/virtual_factory/virtual_factory/manipulator/: learning_data.py  manipulation_grip.py
src/virtual_factory/virtual_factory/server/: gui_server.py
src/virtual_factory_if/: CMakeLists.txt  package.xml
src/virtual_factory_if/msg/: RelativePosition.msg
src/virtual_factory_if/srv/: GoalLocation.srv
