<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>virtual_factory_if</name>
  <version>0.1.0</version> <!-- 초기 버전 번호로 수정 -->
  <description>Interface package for ArUco grasp conveyor system.</description> <!-- 간단한 설명 추가 -->
  <maintainer email="pedralation@gmail.com">viator</maintainer>
  <license>Apache-2.0</license> <!-- 일반적인 ROS2 라이선스 지정 -->

  <!-- 빌드 도구 의존성 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 빌드 의존성 -->
  <build_depend>rosidl_default_runtime</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- 실행 의존성 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend> <!-- 실행 의존성에 위치 조정 -->

  <!-- 그룹 지정 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 테스트 의존성 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 추가 항목 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
